review/src/main/resources/service.yml
apiVersion: v1
kind: Service
metadata:
  name: review
  labels:
    app: review
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: review
  type: ClusterIP
