review/src/main/resources/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: review
spec:
  host: review
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: review-route
spec:
  hosts:
    - review
  http:
    - route:
      - destination:
          host: review
